Bug 1165286 - Java plugin no longer finds browser proxy settings. r=hurley, a=sledru